fix Quasar usage by registering it to Vue
activation of session for Sf (mandatory for in_memory authentification)

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,10 +7,9 @@ framework:
     #csrf_protection: ~
     #http_method_override: true
     #trusted_hosts: ~
-    # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-    #session:
-    #    # The native PHP session handler will be used
-    #    handler_id: ~
+    # I open session only to be able to use in_memory authentification (see the security.yaml)
+    session:
+        handler_id: ~
     #esi: ~
     #fragments: ~
     php_errors:
