the login succeed in PostMan but fail with the frontend app

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,3 +12,9 @@ simple:
 controllers:
     resource: ../src/Controller/
     type: annotation
+
+login_check:
+    path:   /authenticate
+
+logout:
+    path:   /logout
