--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,16 @@
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
     # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
             memory:
                  users:
-                     test_user:
-                         password:           test_pwd
+                     test:
+                         password:           test
                          roles:              ROLE_USER
-                     admin_pwd:
-                         password:           admin_pwd
+                     admin:
+                         password:           admin
                          roles:              [ROLE_USER, ROLE_ADMIN]
     firewalls:
         dev:
@@ -16,6 +18,11 @@ security:
             security: false
         main:
             anonymous: ~
+
+            logout:
+                path:   /logout
+                target: /
+                invalidate_session: true
 
             # activate different ways to authenticate
 
@@ -26,28 +33,18 @@ security:
             # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
             form_login:
-                login_path: /login
-                check_path: /login
+                login_path: app_form_login
+                check_path: login_check
                 # field names for the username and password fields
                 username_parameter: login_username
                 password_parameter: login_password
 
                 # csrf token options
                 csrf_parameter:       _csrf_token
-                #csrf_token_id:        authenticate
-                #csrf_token_generator: my.csrf_token_generator.id
+                #csrf_token_generator: security.csrf.token_manager
 
             remember_me:
                 secret: "%env(APP_SECRET)%"
                 name: demoSpaRemember
                 lifetime: 3600 # in seconds
-                path: /demo/form
-                domain: localhost
-                secure: false
-                httponly: true
                 always_remember_me: true
-
-            logout:
-                path:   /logout
-                target: /demo/form
-                invalidate_session: false
