For instance the npm run dev fail (to be investigated)
add react admin interface, but not sure to have to add the package.json from assets/js/api-platform...
maybe just add it from the main package.json (this is to be thought about, does each assets/js/folder be an independant project inside the main one ? we just need main libs to be available on main project... Wrong : all deps must be availables in main folder except if we can references different node_modules from the main one to allow the build tool to look for all available deps from all node_modules)

--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.12.0",
         "babel-preset-es2017": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
         "bootstrap": "4.0.0-beta.2",
         "node-sass": "^4.5.3",
+        "prop-types": "^15.6.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "sass-loader": "^6.0.6",
         "testcafe": "^0.18.5",
         "vue-loader": "^13.3.0",
