--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,43 +19,44 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         vuejs:
-            pattern: ^/(demo/(vuejs|form|login/json(|/isloggedin|/logout||issue/*))|api)
+            pattern: ^/(demo/(vuejs|form|login/json(|/isloggedin|/logout|/issue/.*))|api)
             anonymous: ~
             json_login:
                 check_path: /demo/login/json
                 # this doesn't work, see in the security.yaml:12 for more explanation
                 #check_path: demo_login_json_check
                 failure_handler: App\Security\AccessDeniedHandler
+            access_denied_handler: App\Security\AccessDeniedHandler
             logout:
                 path:   demo_login_json_logout
                 target: index
                 invalidate_session: true
-        main:
-            pattern: ^/demo/login/(secured|standard|authenticate|logout)
-            anonymous: ~
-
-            # activate different ways to authenticate
-
-            # http_basic: ~
-            # https://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
-
-            form_login:
-                default_target_path: demo_secured_page
-                login_path: demo_login_standard
-                check_path: demo_login_standard_check
-                # field names for the username and password fields
-                username_parameter: login_username
-                password_parameter: login_password
-
-                # csrf token options
-                csrf_parameter:       "%csrf_token_parameter%"
-                csrf_token_generator: security.csrf.token_manager
-                csrf_token_id:        "%csrf_token_id%"
-
-            logout:
-                path:   demo_login_standard_logout
-                target: index
-                invalidate_session: true
+#        main:
+#            pattern: ^/demo/login/(secured|standard|authenticate|logout)
+#            anonymous: ~
+#
+#            # activate different ways to authenticate
+#
+#            # http_basic: ~
+#            # https://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
+#
+#            # form_login: ~
+#            # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
+#
+#            form_login:
+#                default_target_path: demo_secured_page
+#                login_path: demo_login_standard
+#                check_path: demo_login_standard_check
+#                # field names for the username and password fields
+#                username_parameter: login_username
+#                password_parameter: login_password
+#
+#                # csrf token options
+#                csrf_parameter:       "%csrf_token_parameter%"
+#                csrf_token_generator: security.csrf.token_manager
+#                csrf_token_id:        "%csrf_token_id%"
+#
+#            logout:
+#                path:   demo_login_standard_logout
+#                target: index
+#                invalidate_session: true
