Attempt to use laravel-mix instead of webpack-encore to get a better solution. But, style from vue are not extracted, fonts are not at the right places...

--- a/package.json
+++ b/package.json
@@ -1,71 +1,75 @@
 {
-    "name": "sf-flex-encore-vuejs",
-    "version": "0.0.1",
-    "homepage": "https://github.com/Rebolon/php-sf-flex-webpack-encore-vuejs",
-    "license": "MIT License",
-    "private": true,
-    "config": {
-        "php": "php",
-        "server_host_web": "localhost",
-        "server_port_web": "80",
-        "server_port_asset": "8080",
-        "test_browser": "chrome,firefox"
-    },
-    "scripts": {
-        "init-project": "npm run init-project:linux",
-        "init-project:linux": "cp .env.dist .env && composer install && npm install && npm run db-init:linux && npm run dump-js-config:linux",
-        "init-project:windows": "cp .env.dist .env && composer install && npm install && npm run db-init:windows && npm run dump-js-config:windows",
-        "db-init": "npm run db-init:linux",
-        "db-init:linux": "$npm_package_config_php bin/console doctrine:database:create && $npm_package_config_php bin/console doctrine:schema:create && $npm_package_config_php bin/console doctrine:fixtures:load",
-        "db-init:windows": "%npm_package_config_php% bin/console doctrine:database:create && %npm_package_config_php% bin/console doctrine:schema:create && %npm_package_config_php% bin/console doctrine:fixtures:load",
-        "dump-js-config:linux": "rm assets/js/config.js -f && $npm_package_config_php bin/console app:dump-js-config \\'$npm_package_config_server_host_web\\' \\'$npm_package_config_server_port_web\\'",
-        "dump-js-config:windows": "rm assets/js/config.js -f && %npm_package_config_php% bin/console app:dump-js-config %npm_package_config_server_host_web% %npm_package_config_server_port_web%",
-        "sf-dev": "npm run sf-dev:linux",
-        "sf-dev:linux": "echo 'you should use nginx/apache server, read the README' && $npm_package_config_php -S $npm_package_config_server_host_web:$npm_package_config_server_port_web -t public",
-        "sf-dev:windows": "echo 'you should use nginx/apache server, read the README' && %npm_package_config_php% -S %npm_package_config_server_host_web%:%npm_package_config_server_port_web% -t public",
-        "dev-server": "npm run dev-server:linux",
-        "dev-server:linux": "./node_modules/.bin/encore dev-server --port $npm_package_config_server_port_asset",
-        "dev-server:windows": "./node_modules/.bin/encore dev-server --port %npm_package_config_server_port_asset%",
-        "dev-server-hot": "npm run dev-server-hot:linux",
-        "dev-server-hot:linux": "./node_modules/.bin/encore dev-server --hot --port $npm_package_config_server_port_asset",
-        "dev-server-hot:windows": "./node_modules/.bin/encore dev-server --hot --port %npm_package_config_server_port_asset%",
-        "dev": "./node_modules/.bin/encore dev",
-        "watch": "./node_modules/.bin/encore dev --watch",
-        "build": "./node_modules/.bin/encore production",
-        "test": "npm run test:linux",
-        "test:linux": "./node_modules/.bin/testcafe $npm_package_config_test_browser ./assets/tests",
-        "test:windows": "./node_modules/.bin/testcafe %npm_package_config_test_browser% ./assets/tests"
-    },
-    "dependencies": {
-        "@api-platform/admin": "^0.2.0",
-        "apollo-cache-inmemory": "^1.1.5",
-        "apollo-client": "^2.2.0",
-        "apollo-link": "^1.0.7",
-        "apollo-link-error": "^1.0.3",
-        "apollo-link-http": "^1.3.2",
-        "axios": "^0.17.1",
-        "graphql": "^0.12.3",
-        "graphql-tag": "^2.6.1",
-        "prop-types": "^15.6.0",
-        "quasar-extras": "^1.0.2",
-        "quasar-framework": "^0.14.7",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "vue": "^2.5.13",
-        "vue-apollo": "^3.0.0-alpha.3",
-        "vue-router": "^3.0.1",
-        "vuelidate": "^0.6.1"
-    },
-    "devDependencies": {
-        "@symfony/webpack-encore": "^0.17.1",
-        "babel-preset-es2017": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "bootstrap": "4.0.0",
-        "node-sass": "^4.5.3",
-        "prettier": "^1.10.2",
-        "sass-loader": "^6.0.6",
-        "testcafe": "^0.18.6",
-        "vue-loader": "^13.3.0",
-        "vue-template-compiler": "^2.5.13"
-    }
+  "name": "sf-flex-encore-vuejs",
+  "version": "0.0.1",
+  "homepage": "https://github.com/Rebolon/php-sf-flex-webpack-encore-vuejs",
+  "license": "MIT License",
+  "private": true,
+  "config": {
+    "php": "php",
+    "server_host_web": "localhost",
+    "server_port_web": "80",
+    "server_port_asset": "8081",
+    "test_browser": "chrome,firefox"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "init-project": "npm run init-project:linux",
+    "init-project:linux": "cp .env.dist .env && composer install && npm install && npm run db-init:linux && npm run dump-js-config:linux",
+    "init-project:windows": "cp .env.dist .env && composer install && npm install && npm run db-init:windows && npm run dump-js-config:windows",
+    "db-init": "npm run db-init:linux",
+    "db-init:linux": "$npm_package_config_php bin/console doctrine:database:create && $npm_package_config_php bin/console doctrine:schema:create && $npm_package_config_php bin/console doctrine:fixtures:load",
+    "db-init:windows": "%npm_package_config_php% bin/console doctrine:database:create && %npm_package_config_php% bin/console doctrine:schema:create && %npm_package_config_php% bin/console doctrine:fixtures:load",
+    "dump-js-config:linux": "rm assets/js/config.js -f && $npm_package_config_php bin/console app:dump-js-config \\'$npm_package_config_server_host_web\\' \\'$npm_package_config_server_port_web\\'",
+    "dump-js-config:windows": "rm assets/js/config.js -f && %npm_package_config_php% bin/console app:dump-js-config %npm_package_config_server_host_web% %npm_package_config_server_port_web%",
+    "sf-dev": "npm run sf-dev:linux",
+    "sf-dev:linux": "echo 'you should use nginx/apache server, read the README' && $npm_package_config_php -S $npm_package_config_server_host_web:$npm_package_config_server_port_web -t public",
+    "sf-dev:windows": "echo 'you should use nginx/apache server, read the README' && %npm_package_config_php% -S %npm_package_config_server_host_web%:%npm_package_config_server_port_web% -t public",
+    "dev-server": "npm run dev-server:linux",
+    "dev-server:linux": "./node_modules/.bin/encore dev-server --port $npm_package_config_server_port_asset",
+    "dev-server:windows": "./node_modules/.bin/encore dev-server --port %npm_package_config_server_port_asset%",
+    "dev-server-hot": "npm run dev-server-hot:linux",
+    "dev-server-hot:linux": "./node_modules/.bin/encore dev-server --hot --port $npm_package_config_server_port_asset",
+    "dev-server-hot:windows": "./node_modules/.bin/encore dev-server --hot --port %npm_package_config_server_port_asset%",
+    "build": "./node_modules/.bin/encore production",
+    "test": "npm run test:linux",
+    "test:linux": "./node_modules/.bin/testcafe $npm_package_config_test_browser ./assets/tests",
+    "test:windows": "./node_modules/.bin/testcafe %npm_package_config_test_browser% ./assets/tests"
+  },
+  "dependencies": {
+    "@api-platform/admin": "^0.2.0",
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
+    "apollo-link": "^1.0.7",
+    "apollo-link-error": "^1.0.3",
+    "apollo-link-http": "^1.3.2",
+    "axios": "^0.17.1",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
+    "prop-types": "^15.6.0",
+    "quasar-extras": "^1.0.2",
+    "quasar-framework": "^0.14.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "vue": "^2.5.13",
+    "vue-apollo": "^3.0.0-alpha.3",
+    "vue-router": "^3.0.1",
+    "vuelidate": "^0.6.1"
+  },
+  "devDependencies": {
+    "@symfony/webpack-encore": "^0.17.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "4.0.0",
+    "cross-env": "^5.1.3",
+    "laravel-mix": "^2.0.0",
+    "node-sass": "^4.5.3",
+    "prettier": "^1.10.2",
+    "sass-loader": "^6.0.6",
+    "testcafe": "^0.18.6",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.13"
+  }
 }
