--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -15,11 +15,13 @@ api_platform:
         graphiql:
             enabled: true
     collection:
+        order_parameter_name: 'order'
         pagination:
             items_per_page: 10
             client_items_per_page: true
-            items_per_page_parameter_name: itemsPerPage
+            items_per_page_parameter_name: 'itemsPerPage'
             maximum_items_per_page: 50
+            page_parameter_name: 'page'
 
     exception_to_status:
         # The 2 following handlers are registered by default, keep those lines to prevent unexpected side effects
