needs to be tested: remove own JwtTokenAuthenticator because it's finally useless since LexiK bundle already provide its own system (ond't remember why i did this ???)
needs to test if with a different bearer it will also works (and so validate that the service overload is a good idea !)

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,19 +29,16 @@ security:
             pattern: ^/(demo/security/login/jwt|demo/form|api)
             anonymous: ~
             stateless:  true
-
             guard:
                 authenticators:
-                    - App\Security\JwtTokenAuthenticator
+                    - lexik_jwt_authentication.jwt_token_authenticator
 
         # like security_jwt but statefull
         security_json:
             pattern: ^/(demo/security/login/json|token)
             anonymous: ~
-
             #share context with other firewalls (but needs to be statefull so don't use it with sull SPA)
             context: statefull_security
-
             # this guard solve this issue: https://github.com/symfony/symfony/issues/25806
             guard:
                 authenticators:
