--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1",
         "ext-curl": "*",
         "ext-pdo_sqlite": "*",
+        "ext-json": "*",
         "api-platform/api-pack": "^1.1.0",
         "doctrine/doctrine-migrations-bundle": "^1.3.2",
         "easycorp/easyadmin-bundle": "^1.17.18",
