--- a/package.json
+++ b/package.json
@@ -14,41 +14,41 @@
     },
     "scripts": {
         "init-project": "[ -f .env ] && echo '.env file already exists' || cp .env.dist .env && cp phpunit.xml.dist phpunit.xml && composer install && npm install && npm run db-init && npm run dump-js-config && cd assets/js/form-devxpress-angular/ && npm install && cd ../../../ && npm run dev",
-        "init-project:win": "cp .env.dist .env && cp phpunit.xml.dist phpunit.xml && composer install && npm install && npm run db-init:win && npm run dump-js-config:win && cd assets/js/form-devxpress-angular/ && npm install && cd ../../../ && npm run dev:win",
+        "init-project:w": "cp .env.dist .env && cp phpunit.xml.dist phpunit.xml && composer install && npm install && npm run db-init:win && npm run dump-js-config:win && cd assets/js/form-devxpress-angular/ && npm install && cd ../../../ && npm run dev:win",
         "db-init": "$npm_package_config_php bin/console doctrine:database:create && $npm_package_config_php bin/console doctrine:schema:create && $npm_package_config_php bin/console doctrine:fixtures:load -n",
-        "db-init:win": "%npm_package_config_php% bin/console doctrine:database:create && %npm_package_config_php% bin/console doctrine:schema:create && %npm_package_config_php% bin/console doctrine:fixtures:load -n",
+        "db-init:w": "%npm_package_config_php% bin/console doctrine:database:create && %npm_package_config_php% bin/console doctrine:schema:create && %npm_package_config_php% bin/console doctrine:fixtures:load -n",
         "jwt-init": "echo 'Use the same passphrase that is your .env file' && mkdir -p config/jwt && npm run jwt-generation && npm run jwt-generation-test",
-        "jwt-init:win": "echo 'Use the same passphrase that is your .env file' && mkdir -p config\\jwt && npm run jwt-generation:win && npm run jwt-generation-test:win",
+        "jwt-init:w": "echo 'Use the same passphrase that is your .env file' && mkdir -p config\\jwt && npm run jwt-generation:win && npm run jwt-generation-test:win",
         "jwt-generation": "cd config/jwt && openssl genrsa -out private.pem -aes256 4096 && openssl rsa -pubout -in private.pem -out public.pem && cd ../..",
-        "jwt-generation:win": "cd config\\jwt && openssl genrsa -out private.pem -aes256 4096 && openssl rsa -pubout -in private.pem -out public.pem && cd ..\\..",
+        "jwt-generation:w": "cd config\\jwt && openssl genrsa -out private.pem -aes256 4096 && openssl rsa -pubout -in private.pem -out public.pem && cd ..\\..",
         "jwt-generation-test": "echo 'Certificates generation for tests, use the following passphrase: test' && mkdir -p var/cache/config/jwt-test && cp var/travis/jwt-test/* var/cache/config/jwt-test",
-        "jwt-generation-test:win": "echo 'Certificates generation for tests, use the following passphrase: test' && cd var\\cache && mkdir config\\jwt-test && cd ..\\.. && cp var/travis/jwt-test/* var/cache/config/jwt-test",
+        "jwt-generation-test:w": "echo 'Certificates generation for tests, use the following passphrase: test' && cd var\\cache && mkdir config\\jwt-test && cd ..\\.. && cp var/travis/jwt-test/* var/cache/config/jwt-test",
         "dump-js-config": "rm assets/js/config.js -f && $npm_package_config_php bin/console app:dump-js-config $npm_package_config_server_host_web $npm_package_config_server_port_web $npm_package_config_quasar_style",
-        "dump-js-config:win": "rm assets/js/config.js -f && %npm_package_config_php% bin/console app:dump-js-config %npm_package_config_server_host_web% %npm_package_config_server_port_web% %npm_package_config_quasar_style%",
+        "dump-js-config:w": "rm assets/js/config.js -f && %npm_package_config_php% bin/console app:dump-js-config %npm_package_config_server_host_web% %npm_package_config_server_port_web% %npm_package_config_quasar_style%",
         "sf-dev": "echo 'you should use nginx/apache server, read the README' && $npm_package_config_php -S $npm_package_config_server_host_web:$npm_package_config_server_port_web -t public",
-        "sf-dev:win": "echo 'you should use nginx/apache server, read the README' && %npm_package_config_php% -S %npm_package_config_server_host_web%:%npm_package_config_server_port_web% -t public",
+        "sf-dev:w": "echo 'you should use nginx/apache server, read the README' && %npm_package_config_php% -S %npm_package_config_server_host_web%:%npm_package_config_server_port_web% -t public",
         "dev-server": "./node_modules/.bin/encore dev-server --port $npm_package_config_server_port_asset",
-        "dev-server:win": ".\\node_modules\\.bin\\encore dev-server --port %npm_package_config_server_port_asset%",
+        "dev-server:w": ".\\node_modules\\.bin\\encore dev-server --port %npm_package_config_server_port_asset%",
         "dev-server-hot": "./node_modules/.bin/encore dev-server --hot --port $npm_package_config_server_port_asset",
-        "dev-server-hot:win": ".\\node_modules\\.bin\\encore dev-server --hot --port %npm_package_config_server_port_asset%",
+        "dev-server-hot:w": ".\\node_modules\\.bin\\encore dev-server --hot --port %npm_package_config_server_port_asset%",
         "dev": "./node_modules/.bin/encore dev && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng build --extract-css",
         "dev:win": ".\\node_modules\\.bin\\encore dev && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --extract-css",
         "watch": "./node_modules/.bin/encore dev --watch && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng build --watch --extract-css",
-        "watch:win": "START /B .\\node_modules\\.bin\\encore dev --watch && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --watch --extract-css",
+        "watch:w": "START /B .\\node_modules\\.bin\\encore dev --watch && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --watch --extract-css",
         "build": "./node_modules/.bin/encore production && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng build --prod --aot --watch --extract-css",
-        "build:win": ".\\node_modules\\.bin\\encore production && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --prod --aot --watch --extract-css",
+        "build:w": ".\\node_modules\\.bin\\encore production && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --prod --aot --watch --extract-css",
         "build-for-test": "./node_modules/.bin/encore dev",
-        "build-for-test:win": ".\\node_modules\\.bin\\encore dev",
+        "build-for-test:w": ".\\node_modules\\.bin\\encore dev",
         "test-cafe": "./node_modules/.bin/testcafe $npm_package_config_test_browser ./assets/tests  --reporter spec,xunit:var/report/testcafe.xml",
         "test-cafe-skip": "./node_modules/.bin/testcafe $npm_package_config_test_browser ./assets/tests/*.js  --reporter spec,xunit:var/report/testcafe.xml --skip-js-errors",
-        "test-cafe:win": ".\\node_modules\\.bin\\testcafe %npm_package_config_test_browser% ./assets/tests  --reporter  spec,xunit:var/report/testcafe.xml",
-        "test-cafe-skip:win": ".\\node_modules\\.bin\\testcafe %npm_package_config_test_browser% ./assets/tests/*.js --reporter spec,xunit:var/report/testcafe.xml --skip-js-errors",
+        "test-cafe:w": ".\\node_modules\\.bin\\testcafe %npm_package_config_test_browser% ./assets/tests  --reporter  spec,xunit:var/report/testcafe.xml",
+        "test-cafe-skip:w": ".\\node_modules\\.bin\\testcafe %npm_package_config_test_browser% ./assets/tests/*.js --reporter spec,xunit:var/report/testcafe.xml --skip-js-errors",
         "test-karma": "./node_modules/.bin/karma start assets/tests/units/karma.conf.js --single-run",
         "test-karma-watch": "./node_modules/.bin/karma start assets/tests/units/karma.conf.js",
         "test-php": "npm run build-for-test && ./vendor/bin/simple-phpunit",
-        "test-php:win": "npm run build-for-test:win && .\\vendor\\bin\\simple-phpunit.bat",
+        "test-php:w": "npm run build-for-test:win && .\\vendor\\bin\\simple-phpunit.bat",
         "test": "npm run dev && npm run test-php && npm run test-karma && npm run test-cafe && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng test && node_modules/.bin/ng e2e",
-        "test:win": "npm run dev:win && npm run test-php:win && npm run test-karma && npm run test-cafe:win && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng test && node_modules\\.bin\\ng e2e"
+        "test:w": "npm run dev:win && npm run test-php:win && npm run test-karma && npm run test-cafe:win && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng test && node_modules\\.bin\\ng e2e"
     },
     "dependencies": {
         "@api-platform/admin": "^0.4.2",
