wouahou, didn't expect this migration to be so a pain
@todo: check that babel works well for old browser (compat IE 10 ?)
@todo: check that all page require only what they needs
@todo: remove symfony/encore from npm (only install from compser and check it still works)

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/framework-bundle": "~4.1",
         "symfony/monolog-bundle": "^3.3.0",
         "symfony/profiler-pack": "~1.0",
+        "symfony/webpack-encore-bundle": "^1.2",
         "symfony/yaml": "~4.1",
         "webonyx/graphql-php": "^0.11.6"
     },
