--- a/package.json
+++ b/package.json
@@ -51,52 +51,57 @@
         "test:win": "npm run dev:win && npm run test-php:win && npm run test-karma && npm run test-cafe:win && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng test && node_modules\\.bin\\ng e2e"
     },
     "dependencies": {
-        "@api-platform/admin": "^0.4.2",
+        "@api-platform/admin": "^0.6.2",
         "@rebolon/json-reviver": "0.0.7",
-        "apollo-cache-inmemory": "^1.2.1",
-        "apollo-client": "^2.3.1",
-        "apollo-link": "^1.2.2",
-        "apollo-link-error": "^1.1.0",
-        "apollo-link-http": "^1.5.4",
+        "apollo-cache-inmemory": "^1.5.1",
+        "apollo-client": "^2.5.1",
+        "apollo-link": "^1.2.8",
+        "apollo-link-error": "^1.1.7",
+        "apollo-link-http": "^1.5.11",
         "axios": "^0.18.0",
-        "devextreme": "^18.2.3",
-        "devextreme-vue": "^18.2.3",
-        "graphql": "^0.13.2",
-        "graphql-tag": "^2.9.2",
-        "offline-plugin": "^5.0.3",
-        "prop-types": "^15.6.2",
+        "devextreme": "^18.2.6",
+        "devextreme-vue": "^18.2.6",
+        "graphql": "^14.1.1",
+        "graphql-tag": "^2.10.1",
+        "offline-plugin": "^5.0.6",
+        "prop-types": "^15.7.2",
         "quasar-extras": "^1.0.3",
         "quasar-framework": "^0.15.15",
-        "react": "^16.4.1",
-        "react-dom": "^16.4.1",
-        "rxjs": "^6.1.0",
-        "vue": "^2.5.16",
-        "vue-apollo": "^3.0.0-beta.10",
-        "vue-router": "^3.0.1",
-        "vuelidate": "^0.6.2"
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
+        "rxjs": "^6.4.0",
+        "uglifyjs-webpack-plugin": "^2.1.2",
+        "vue": "^2.6.8",
+        "vue-apollo": "^3.0.0-beta.28",
+        "vue-router": "^3.0.2",
+        "vuelidate": "^0.7.4"
     },
     "devDependencies": {
-        "@angular/cli": "^1.7.4",
-        "@symfony/webpack-encore": "^0.22.4",
-        "babel-preset-es2017": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "bootstrap": "^4.1.1",
+        "@angular/cli": "^7.3.4",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
+        "@symfony/webpack-encore": "^0.24.0",
+        "bootstrap": "^4.3.1",
         "create-react-app": "^1.5.2",
-        "jasmine": "^3.0.0",
-        "karma": "^2.0.4",
+        "jasmine": "^3.3.1",
+        "karma": "^2.0.5",
         "karma-chrome-launcher": "^2.2.0",
         "karma-jasmine": "^1.1.2",
-        "karma-jasmine-html-reporter": "^1.1.0",
+        "karma-jasmine-html-reporter": "^1.4.0",
         "karma-junit-reporter": "^1.2.0",
         "karma-spec-reporter": "0.0.32",
-        "karma-webpack": "^3.0.0",
-        "node-sass": "^4.9.0",
-        "prettier": "^1.13.5",
-        "rxjs-tslint": "^0.1.5",
-        "sass-loader": "^7.0.1",
-        "testcafe": "^0.20.3",
-        "testcafe-vue-selectors": "^3.0.0",
-        "vue-loader": "^15.0.11",
-        "vue-template-compiler": "^2.5.16"
-    }
+        "karma-webpack": "^3.0.5",
+        "node-sass": "^4.11.0",
+        "prettier": "^1.16.4",
+        "rxjs-tslint": "^0.1.7",
+        "sass-loader": "^7.1.0",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "testcafe": "^0.20.5",
+        "testcafe-vue-selectors": "^3.0.1",
+        "ts-loader": "^5.3.0",
+        "vue-loader": "^15.7.0",
+        "vue-template-compiler": "^2.6.8"
+    },
+    "browserslist": "> 1%"
 }
