add 2 e2e tests with panther and removed testcafe

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,11 +58,9 @@ before_script:
   - fluxbox >/dev/null 2>&1 &
 
 script:
-# until this issue is open i disable npm test and use test-php and test-karma in place (issue:https://github.com/DevExpress/testcafe/issues/2195, original post: https://testcafe-discuss.devexpress.com/t/role-sometime-it-doesnt-seem-to-be-played/875/9)
-#  - npm test
-#  - npm run test-cafe
-  - npm run test-php
-  - npm run test-karma
+  - npm test
+  #- npm run test-php
+  #- npm run test-karma
 
 notifications:
   email: false
