--- a/package.json
+++ b/package.json
@@ -37,12 +37,10 @@
         "watch:win": "START /B .\\node_modules\\.bin\\encore dev --watch && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --watch --extract-css",
         "build": "./node_modules/.bin/encore production && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng build --prod --aot --extract-css",
         "build:win": ".\\node_modules\\.bin\\encore production && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --prod --aot --extract-css",
-        "build-for-test": "./node_modules/.bin/encore dev",
-        "build-for-test:win": ".\\node_modules\\.bin\\encore dev",
         "test-karma": "./node_modules/.bin/karma start assets/tests/units/karma.conf.js --single-run",
         "test-karma-watch": "./node_modules/.bin/karma start assets/tests/units/karma.conf.js",
-        "test-php": "npm run build-for-test && ./vendor/bin/simple-phpunit",
-        "test-php:win": "npm run build-for-test:win && .\\vendor\\bin\\simple-phpunit.bat",
+        "test-php": "npm run dev && rm -rf var/cache/test && ./vendor/bin/simple-phpunit",
+        "test-php:win": "npm run dev:win && rm -rf var/cache/test  && .\\vendor\\bin\\simple-phpunit.bat",
         "test": "npm run dev && npm run test-php && npm run test-karma && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng test && node_modules/.bin/ng e2e",
         "test:win": "npm run dev:win && npm run test-php:win && npm run test-karma && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng test && node_modules\\.bin\\ng e2e"
     },
@@ -51,9 +49,9 @@
         "@rebolon/json-reviver": "0.0.7",
         "apollo-cache-inmemory": "^1.5.1",
         "apollo-client": "^2.5.1",
-        "apollo-link": "^1.2.8",
-        "apollo-link-error": "^1.1.7",
-        "apollo-link-http": "^1.5.11",
+        "apollo-link": "^1.2.9",
+        "apollo-link-error": "^1.1.8",
+        "apollo-link-http": "^1.5.12",
         "axios": "^0.18.0",
         "devextreme": "^18.2.6",
         "devextreme-vue": "^18.2.6",
@@ -74,13 +72,13 @@
     },
     "devDependencies": {
         "@angular/cli": "^7.3.4",
-        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-env": "^7.3.4",
         "@babel/preset-react": "^7.0.0",
         "@symfony/webpack-encore": "^0.24.0",
         "bootstrap": "^4.3.1",
         "create-react-app": "^1.5.2",
         "jasmine": "^3.3.1",
-        "karma": "^2.0.5",
+        "karma": "^4.0.1",
         "karma-chrome-launcher": "^2.2.0",
         "karma-jasmine": "^2.0.1",
         "karma-jasmine-html-reporter": "^1.4.0",
@@ -93,7 +91,7 @@
         "sass-loader": "^7.1.0",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
-        "ts-loader": "^5.3.0",
+        "ts-loader": "^5.3.3",
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "^2.6.8"
     },
