--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
         "watch:win": "START /B .\\node_modules\\.bin\\encore dev --watch && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --watch --extract-css",
         "build": "./node_modules/.bin/encore production && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng build --prod --aot --extract-css",
         "build:win": ".\\node_modules\\.bin\\encore production && cd assets/js/form-devxpress-angular/ && node_modules\\.bin\\ng build --prod --aot --extract-css",
-        "test-karma": "./node_modules/.bin/karma start assets/tests/units/karma.conf.js --single-run",
-        "test-karma-watch": "./node_modules/.bin/karma start assets/tests/units/karma.conf.js",
+        "test-karma": "./node_modules/.bin/karma start karma.conf.js --single-run",
+        "test-karma-watch": "./node_modules/.bin/karma start karma.conf.js",
         "test-php": "npm run dev && rm -rf var/cache/test && ./vendor/bin/simple-phpunit",
         "test-php:win": "npm run dev:win && rm -rf var/cache/test  && .\\vendor\\bin\\simple-phpunit.bat",
         "test": "npm run dev && npm run test-php && npm run test-karma && cd assets/js/form-devxpress-angular/ && node_modules/.bin/ng test && node_modules/.bin/ng e2e",
