--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,10 @@ before_script:
 #  - sudo service php7.1-fpm restart
 #  - sudo service nginx restart
   - npm run sf-dev &
+# For chrome usage
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 script:
   - npm test
