--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "jasmine": "^3.3.1",
         "karma": "^4.0.1",
         "karma-chrome-launcher": "^2.2.0",
+        "karma-firefox-launcher": "^1.1.0",
         "karma-jasmine": "^2.0.1",
         "karma-jasmine-html-reporter": "^1.4.0",
         "karma-junit-reporter": "^1.2.0",
