disable karma test for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,9 @@ before_script:
   - npm run sf-dev &
 
 script:
-  - npm test
-  #- npm run test-php
+  #disable karma test coz it fails to launch chrome or firefox, (scrutinizer doesn't have this problem)
+  #- npm test
+  - npm run test-php
   #- npm run test-karma
 
 notifications:
