--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -27,6 +27,7 @@ api_platform:
         # The 2 following handlers are registered by default, keep those lines to prevent unexpected side effects
         Symfony\Component\Serializer\Exception\ExceptionInterface: 400 # Use a raw status code (recommended)
         ApiPlatform\Core\Exception\InvalidArgumentException: 'HTTP_BAD_REQUEST' # Or a `Symfony\Component\HttpFoundation\Response`'s constant
+        ApiPlatform\Core\Exception\ItemNotFoundException: 404
 
     # JWT extra info
     swagger:
