update apiPlatform to 2.4.*
add cache on Job
fix comments
@todo: app failed to load coz of Call to a member function getClassMetadata() on null for Reader entity

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,8 @@ parameters:
     api_platform_prefix: '/api'
     token_jwt_ttl: 3600
     token_jwt_bearer: 'Bearer'
+    # fallback if no VARNISH_URL env defined
+    env(VARNISH_URL): ''
 
 services:
     # default configuration for services in *this* file
