--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -35,3 +35,14 @@ api_platform:
             apiKey:
                 name: Authorization
                 type: header
+
+    # Cache management (needs a cache proxy)
+    http_cache:
+        invalidation:
+            enabled: true
+            varnish_urls: ['%env(VARNISH_URL)%']
+        # Adds sensitive default cache headers
+        max_age: 0
+        shared_max_age: 3600
+        vary: ['Content-Type', 'Authorization']
+        public: true
