--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,18 @@
     "require": {
         "php": "^7.1",
         "ext-curl": "*",
-        "ext-pdo_sqlite": "*",
         "ext-json": "*",
+        "ext-pdo_sqlite": "*",
         "api-platform/api-pack": "^1.2.0",
         "doctrine/doctrine-migrations-bundle": "^1.3.2",
         "easycorp/easyadmin-bundle": "^2.1.1",
         "lexik/jwt-authentication-bundle": "^2.5.4",
         "ocramius/proxy-manager": "2.1.*",
-        "php-http/httplug-pack": "^1.1.0",
         "rebolon/api-json-param-converter": "^1.3.2",
         "sensio/framework-extra-bundle": "^5.2.4",
         "symfony/console": "~4.1",
         "symfony/framework-bundle": "~4.1",
+        "symfony/http-client": "^4.3@dev",
         "symfony/monolog-bundle": "^3.3.0",
         "symfony/profiler-pack": "~1.0",
         "symfony/webpack-encore-bundle": "^1.2",
@@ -37,7 +37,7 @@
         "symfony/webpack-encore-pack": "^1.0.3"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "repositories": [
         {
             "type": "vcs",
