--- a/composer.json
+++ b/composer.json
@@ -26,18 +26,18 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0.4",
         "friendsofphp/php-cs-fixer": "^2.13.1",
         "roave/security-advisories": "dev-master",
-        "sensiolabs/security-checker": "~4.1",
+        "sensiolabs/security-checker": "~5.0.3",
         "squizlabs/PHP_CodeSniffer": "^3.3.2",
         "symfony/browser-kit": "~4.1",
         "symfony/css-selector": "~4.1",
         "symfony/dom-crawler": "~4.1",
         "symfony/dotenv": "~4.1",
-        "symfony/flex": "^1.1.8",
+        "symfony/flex": "^1.2.0",
         "symfony/test-pack": "^1.0",
         "symfony/webpack-encore-pack": "^1.0.3"
     },
     "minimum-stability": "dev",
-    "prefer-stable": false,
+    "prefer-stable": true,
     "repositories": [
         {
             "type": "vcs",
