move to PHP 7.2.x
deps update
changet httpplug to symfony http client
fix symfony deprecations
add POSTMAN.json file to allow developper to test quickly the API

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -20,6 +20,7 @@ api_platform:
             client_items_per_page: true
             items_per_page_parameter_name: itemsPerPage
             maximum_items_per_page: 50
+            page_parameter_name: page
 
     exception_to_status:
         # The 2 following handlers are registered by default, keep those lines to prevent unexpected side effects
