--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1",
+        "php": "^7.2",
         "ext-curl": "*",
         "ext-pdo_sqlite": "*",
         "api-platform/api-pack": "^1.1.0",
@@ -10,11 +10,11 @@
         "easycorp/easyadmin-bundle": "^1.17.18",
         "lexik/jwt-authentication-bundle": "^2.5.4",
         "ocramius/proxy-manager": "2.1.*",
-        "php-http/httplug-pack": "^1.1.0",
         "rebolon/api-json-param-converter": "^1.3.2",
         "sensio/framework-extra-bundle": "^5.2.4",
         "symfony/console": "~4.1",
         "symfony/framework-bundle": "~4.1",
+        "symfony/http-client": "~4.1",
         "symfony/monolog-bundle": "^3.3.0",
         "symfony/profiler-pack": "~1.0",
         "symfony/webpack-encore-bundle": "^1.2",
