--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2",
         "ext-curl": "*",
         "ext-json": "*",
+        "ext-pdo": "*",
         "ext-pdo_sqlite": "*",
         "api-platform/api-pack": "^1.2.0",
         "doctrine/doctrine-migrations-bundle": "^1.3.2",
