--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,9 +30,9 @@ services:
         bind:
             $csrfTokenParameter: '%csrf_token_parameter%'
             $csrfTokenId: '%csrf_token_id%'
-            $loginUsernamePath : '%login_username_path%'
-            $loginPasswordPath : '%login_password_path%'
-            $providerKey : '%provider_id%'
+            $loginUsernamePath: '%login_username_path%'
+            $loginPasswordPath: '%login_password_path%'
+            $providerKey: '%provider_id%'
             $apiPlatformPrefix: '%api_platform_prefix%'
             $tokenJwtTtl: '%token_jwt_ttl%'
             $tokenJwtBearer: '%token_jwt_bearer%'
@@ -63,13 +63,6 @@ services:
         arguments: [ '@App\Swagger\SwaggerDecorator.inner' ]
         autoconfigure: false
 
-    # to overload tokenExtractor with specific Bearer, do this:
-    lexik_jwt_authentication.extractor.authorization_header_extractor:
-        class: Lexik\Bundle\JWTAuthenticationBundle\TokenExtractor\AuthorizationHeaderTokenExtractor
-        arguments:
-            - '%token_jwt_bearer%'
-            - 'Authorization'
-
     Symfony\Contracts\HttpClient\HttpClientInterface:
         factory: ['Symfony\Component\HttpClient\HttpClient', 'create']
         public: true
@@ -81,6 +74,50 @@ services:
 
     App\Security\JwtTokenTools:
         public: true
+
+    # needs to alias the current security.user.provider.concrete.in_memory to the class (seems not done in sf or security bundle)
+    Symfony\Component\Security\Core\User\InMemoryUserProvider:
+        alias: security.user.provider.concrete.in_memory
+
+    # to overload tokenExtractor with specific Bearer, do this:
+    lexik_jwt_authentication.extractor.authorization_header_extractor:
+        class: Lexik\Bundle\JWTAuthenticationBundle\TokenExtractor\AuthorizationHeaderTokenExtractor
+        arguments:
+            - '%token_jwt_bearer%'
+            - 'Authorization'
+
+    # define JWT Listener to add extra public info into payload
+    acme_api.event.authentication_success_listener:
+        class: App\EventListener\AuthenticationSuccessListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccessResponse }
+
+    acme_api.event.jwt_created_listener:
+        class: App\EventListener\JWTCreatedListener
+        arguments: [ '@request_stack' ]
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
+
+    acme_api.event.jwt_decoded_listener:
+        class: App\EventListener\JWTDecodedListener
+        arguments: [ '@request_stack' ]
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_decoded, method: onJWTDecoded }
+
+    #acme_api.event.jwt_authenticated_listener:
+    #    class: App\EventListener\JWTAuthenticatedListener
+    #    tags:
+    #        - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_authenticated, method: onJWTAuthenticated }
+
+    acme_api.event.authentication_failure_listener:
+        class: App\EventListener\AuthenticationFailureListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_failure, method: onAuthenticationFailureResponse }
+
+    acme_api.event.jwt_invalid_listener:
+        class: App\EventListener\JWTInvalidListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_invalid, method: onJWTInvalid }
 
     App\Request\ParamConverter\Library\AuthorConverter:
         public: true
@@ -118,10 +155,6 @@ services:
         public: true
         tags:
             - { name: request.param_converter, priority: -2, converter: serie }
-
-    # needs to alias the current security.user.provider.concrete.in_memory to the class (seems not done in sf or security bundle)
-    Symfony\Component\Security\Core\User\InMemoryUserProvider:
-        alias: security.user.provider.concrete.in_memory
 
     App\DataProvider\TagDataProvider:
         arguments:
